--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>MAKARNA TARİFİ</title>
 </head>
 <body>
+    <style>
+        h2,h3{
+            color:rgb(175, 0, 0)
+        }
+    </style>
     <h2>
     SALÇALI MAKARNA
     </h2> <hr>
@@ -19,7 +24,7 @@
     <u><strong>Kaç Kişilik:</strong></u> 4 kişilik &nbsp;&nbsp;&nbsp;
     <u><strong>Hazırlama Süresi:</strong></u> 20 dakika &nbsp;&nbsp;&nbsp; 
     <br>
-    <h3>Makarna tarifi için gerekli malzemeler:</h3> <br>
+    <h3 style="text-align:center;">Makarna tarifi için gerekli malzemeler:</h3> <br>
         <ul>
             <li><strong>1 paket</strong> spagetti</li>
             <li><strong>4 yemek kaşığı</strong> zeytinyağı</li>
@@ -29,7 +34,7 @@
             <li><strong>1 çay kaşığı</strong> tuz</li>
             <li><strong>1 çay kaşığı</strong> taze çekilmiş tane karabiber</li>
         </ul> <br>
-    <h3>Salçalı makarna nasıl yapılır:</h3>
+    <h3 style="text-align:center;">Salçalı makarna nasıl yapılır:</h3>
         <ol> 
             <strong>
                 <li>Derin bir tencereye suyu ve tuzu ekleyip kaynatın. Spagetti makarnaları kaynamış suda yaklaşık 10 dakika haşlayın.</li>
